# st0x.rest.api

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEPLOY.md  OPERATIONS.md  README.md  cache.md  deploy.nix  dev-config.toml  flake.nix  keys.nix  os.nix  prep.sh  rust.nix
.github/workflows/: cd.yaml  ci.yaml  deploy-preview.yaml
bench/: .env.example  .gitignore  README.md  all.sh  compare.sh  discover.sh  endpoints.toml  lib.sh  run.sh
config/: dev.toml  preview.toml  prod.toml  rest-api.toml
docs/: book.toml  ops.md
docs/src/: SUMMARY.md  authentication.md  errors.md  getting-started.md  introduction.md  orders.md  rate-limiting.md  registry.md  swap-flow.md  tokens.md  trades.md  vaults.md
infra/: default.nix  main.tf  outputs.tf  secrets.nix  terraform.tfstate.age  terraform.tfvars.age  terraform.tfvars.example  variables.tf
migrations/: 20260212000000_create_api_keys.sql  20260324000000_create_issued_swap_calldata.sql  20260324010000_create_customer_volume_report_tables.sql  20260401000000_create_registry_url_history.sql  20260511000000_create_private_registry_history.sql  20260522000000_create_wrapped_exchange_rate_snapshots.sql  20260524000000_create_wrapped_donation_events.sql  20260524000001_widen_wrapped_donation_unique_index.sql  20260524000002_make_new_assets_per_share_nullable.sql  20260604000000_create_wrapped_exchange_rate_snapshots.sql
patches/: rain-orderbook-deployed.patch
scripts/: smoke.sh  uptimerobot-setup.sh
src/: app_state.rs  auth.rs  cache.rs  cache_warmer.rs  catchers.rs  cli.rs  config.rs  denomination.rs  direct_trades.rs  erc4626.rs  error.rs  log_files.rs  main.rs  market_calendar.rs  registry_artifact.rs  rpc.rs  signing.rs  telemetry.rs  test_helpers.rs  wrap_ratio.rs  wrapped_donations.rs  wrapped_rates.rs
src/db/: issued_swap_calldata.rs  mod.rs  pool.rs  registry_history.rs  settings.rs  wrapped_rates.rs  (+2 more)
(+60 files in other folders)
