[package]
name = "st0x_rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
utoipa = { version = "5", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "9", features = ["rocket"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "=1.8.3", default-features = false, features = [
  "std",
  "serde",
  "providers",
] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.58", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
toml = "0.8"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
sha2 = "0.10"
rain_orderbook_js_api = { package = "raindex_js_api", path = "lib/rain.orderbook/crates/js_api", default-features = false }
rain_orderbook_common = { package = "raindex_common", path = "lib/rain.orderbook/crates/common", default-features = false }
rain_orderbook_app_settings = { package = "raindex_app_settings", path = "lib/rain.orderbook/crates/settings", default-features = false }
rain_orderbook_bindings = { package = "raindex_bindings", path = "lib/rain.orderbook/crates/bindings", default-features = false }
rain-erc = { git = "https://github.com/rainlanguage/rain.erc", rev = "755b0bf5cad18a2cc43a57be52298b6dadd96751" }
rain-math-float = "0.1.7"
wasm-bindgen = "=0.2.122"
url = "2"

[dev-dependencies]
tracing-test = "0.2"
tempfile = "3"
